# config-manager

./: .gcloudignore  .gitignore  BENCHMARK_IMPLEMENTATION_REPORT.md  Cargo.toml  DEPENDENCY_PURITY_REPORT.md  PHASE_2B_COMPLETION_REPORT.md  index.js  package-lock.json  package.json
.claude-flow/metrics/: system-metrics.json
agents/: Dockerfile  entrypoint.sh
agents/config-validation/: Cargo.toml
agents/config-validation/contracts/: decision_event.rs  mod.rs  schemas.rs
agents/config-validation/src/: compatibility.rs  error.rs  lib.rs  schema.rs  validation.rs
agents/config-validation/src/cli/: commands.rs  mod.rs  output.rs
agents/config-validation/src/client/: mod.rs  ruvector.rs
agents/config-validation/tests/: integration.rs
agents/integration-health/: Cargo.toml
agents/integration-health/contracts/: adapters.rs  decision_event.rs  mod.rs
agents/integration-health/src/: lib.rs
agents/integration-health/src/client/: mod.rs
agents/integration-health/src/engine/: checkers.rs  mod.rs
agents/integration-health/src/handler/: mod.rs
agents/integration-health/src/telemetry/: mod.rs
agents/integration-health/tests/: integration.rs
agents/schema-truth/: Cargo.toml
agents/schema-truth/contracts/: decision_event.rs  mod.rs  schemas.rs
agents/schema-truth/src/: lib.rs
agents/schema-truth/tests/: integration.rs
benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
benchmarks/output/: summary.md
crates/agentics-span/: Cargo.toml
crates/agentics-span/src/: context.rs  extract.rs  lib.rs  response.rs  span.rs  tree.rs
crates/llm-config-api/: Cargo.toml
crates/llm-config-api/src/: middleware.rs  routes.rs  server.rs
crates/llm-config-cli/src/: main.rs
crates/llm-config-core/: Cargo.toml
crates/llm-config-core/src/: error_utils.rs  lib.rs
crates/llm-config-security/: Cargo.toml
crates/llm-config-security/src/: rate_limit.rs
deployment/gcp/: DEPLOYMENT.md  Dockerfile  Dockerfile.deploy  FINAL_DEPLOYMENT_SPECIFICATION.md  cli-commands.md  cloudbuild.yaml  deploy.sh  env-config.yaml  iam-setup.sh  phase6-deploy.sh  service.yaml  verify-deployment.sh
docs/: ARCHITECTURE_SUMMARY.md  LLM_INTEGRATION_ARCHITECTURE.md  PHASE6_COMPLIANCE.md  PHASE_2A_READINESS_REPORT.md  PHASE_2B_INFRA_INTEGRATION_REPORT.md  PROVIDER_IMPLEMENTATION_REPORT.md
plans/: SYSTEM_ARCHITECTURE_SPECIFICATION.md
test/: handler.test.js
(+39 files in other folders)
